--- a/Galley.html
+++ b/Galley.html
@@ -12,6 +12,7 @@
             <img src="thumbnail1.jpg" alt="Thumbnail 1" class="thumbnail" data-full="image1.jpg">
             <img src="thumbnail2.jpg" alt="Thumbnail 2" class="thumbnail" data-full="image2.jpg">
             <img src="thumbnail3.jpg" alt="Thumbnail 3" class="thumbnail" data-full="image3.jpg">
+            <img src="thumbnail4.png" alt="Thumbnail 3" class="thumbnail" data-full="image3.jpg">
             <!-- Add more thumbnails as needed -->
         </div>
         <div class="full-image-container">
